--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ exclude = "src/manage.py, */migrations/*"
 multi_line_output = 3
 
 [tool.pytest.ini_options]
+addopts = "-v"
 pythonpath = "src"
 DJANGO_SETTINGS_MODULE = "probely.settings"
 python_files = ["tests.py", "test_*.py", "*_tests.py"]
